--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
     "discord-api-types": "^0.27.2",
-    "discord.js": "^13.6.0"
+    "discord.js": "^13.6.0",
+    "sequelize": "^6.16.2",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "^8.9.0"
