--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "discord-api-types": "^0.27.2",
     "discord.js": "^13.6.0",
     "sequelize": "^6.16.2",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.9.0"
+    "eslint": "^8.9.0",
+    "sequelize-cli": "^6.4.1"
   }
 }
