--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.9.0",
-    "sequelize-cli": "^6.4.1"
+    "eslint": "^8.9.0"
   }
 }
