--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.12.0"
+    "eslint": "^8.12.0",
+    "typescript": "^4.7.4"
   }
 }
