--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "one-pisscorp-bot",
   "version": "1.0.0",
   "description": "A Discord bot that counts when people mention Lady One, and some other One-related things.",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
