--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "@types/sqlite3": "^3.1.8",
     "discord-api-types": "^0.27.2",
     "discord.js": "^13.6.0",
     "sequelize": "^6.16.2",
-    "sqlite3": "^4.2.0"
+    "sequelize-typescript": "^2.1.3",
+    "sqlite3": "^4.2.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "eslint": "^8.12.0",
-    "typescript": "^4.7.4"
+    "eslint": "^8.12.0"
   }
 }
